--- a/jupyter/merge_gene_info.ipynb
+++ b/jupyter/merge_gene_info.ipynb
@@ -112,6 +112,28 @@
    },
    "outputs": [],
    "source": [
+    "network.to_csv('../data/network_broken.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "network.head(20).to_csv('../data/network_broken_20.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "assert False"
    ]
   },
