--- a/jupyter/merge_gene_info--2_organisms.ipynb
+++ b/jupyter/merge_gene_info--2_organisms.ipynb
@@ -3160,9 +3160,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:neo4j]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-neo4j-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3174,7 +3174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
